src/test/testFiles/invalid/semanticErrors/stackTooManyArgumentsInConstructor.manimdsl
let x = new Stack<number>(1);